add request get ratio
