# routes/index.js
@@ -19,6 +19,9 @@ export default (app) => {
     // Get a member
     app.get('/member/:_id', auth, (req, res) => members.get(req, res))
 
+    // Get ratio of a member
+    app.get('/member/ratio/:_id', (req, res) => members.get_ratio(req, res))
+
     // Login the member
     app.post('/login', (req, res) => members.login(req, res))
 
